# try-rustlang

./: Cargo.toml  Makefile  Procfile  README.md  codegen.sh  docker-compose.yaml  fix.js
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
apps/consumer/: Cargo.toml
apps/consumer/src/: main.rs
apps/consumer/src/config/: config.rs
apps/consumer/src/container/: container.rs
apps/consumer/src/data_store/: store.rs
apps/consumer/src/kafka_utils/: kafka_handler.rs  mod.rs  subscribe.rs
apps/consumer/src/store/: balance.rs  mod.rs  page_view.rs  store.rs
apps/example/: Cargo.toml
apps/example/src/: main.rs
apps/producer/: Cargo.toml  Makefile
apps/producer/src/: main.rs
apps/producer/src/kafka_utils/: create_topics.rs  mod.rs  produce.rs
apps/try-rustlang/: .env  Cargo.toml  Makefile
apps/try-rustlang/src/: main.rs
libs/utils/: .gitignore  Cargo.toml  build.rs
libs/utils/src/: convert_chrono_to_timestamp.rs  lib.rs
libs/utils/src/access_control/: mod.rs
libs/utils/src/event/: mod.rs
libs/utils/src/kafka/: create_topics.rs  mod.rs  topics.rs
specs/: access-control.jsonschema.json  access-control.jsonschema.jtd.json  access-control.jtd.json  base_cloudevent_v1.0.1.json  event.jtd.json  message.jsonschema.json
specs/avro/: messages-topic.avsc  page-view.avsc  purchase.avsc
specs/protobuf/: customer-event.proto  page-view.proto  purchase.proto
specs/types/enums/: access-role.jsonschema.json
src/: access_control.rs  main.rs
src/config/: config.rs  constants.rs
src/kafka_handler/: mod.rs  produce.rs  subscribe.rs
src/kafka_utils/: produce.rs  subscribe.rs
src/utils/: add.rs
tools/: package-lock.json  package.json  tsconfig.json
tools/src/: convert.mts
tools/src/lib/: cloudEventProperties.ts  convertJsonSchemaToJTD.ts
