[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
kafka = "0.9"
dotenv = "0.15.0"
lazy_static = "1.4.0"
fstrings = "0.2.3"
utils = { path = "../../libs/utils" }
