[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
kafka = "0.9"
dotenv = "0.15.0"
lazy_static = "1.4.0"
utils = { path = "../../libs/utils" }
protobuf = "3.2.0"
tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread"] }