[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
kafka = "0.9"
dotenv = "0.15.0"
lazy_static = "1.4.0"
utils = { path = "../../libs/utils" }
protobuf = "3.2.0"
tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread"] }
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4.26"
serde = "1.0.175"
async-trait = "0.1.72"
mockall = "0.11.4"
shaku = "0.6.1"
shaku_derive = "0.6.1"
