[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
protobuf = "3.2.0"
serde = { version ="1.0.163", features=["derive"] }
serde_json = "1.0.96"
rdkafka = { version = "0.33.2", features = ["ssl", "libz", "cmake-build", "gssapi", "zstd-pkg-config"] }


[build-dependencies]
protobuf-codegen = "3.2.0"
protoc-bin-vendored = "3.0.0"
